# IteratedHydra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: hydra.hpp
src/: hydra.cpp  main.cpp
