CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(IteratedHydra)

SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

SET(PROJECT_SOURCE
    src/main.cpp
    src/hydra.cpp
)

SET(PROJECT_INCLUDE
    include/hydra.hpp
)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCE} ${PROJECT_INCLUDE})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)